Comparable form validator: fix generic wildcard