@@ -4,16 +4,16 @@ import static com.google.common.base.Preconditions.checkNotNull;
 
 import java.util.Collection;
 import java.util.Comparator;
+import java.util.List;
 
 import org.apache.wicket.markup.html.form.Form;
 import org.apache.wicket.markup.html.form.FormComponent;
 import org.apache.wicket.markup.html.form.validation.AbstractFormValidator;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Ordering;
 
-public class ComparableFormValidator<T extends Comparable<T>> extends AbstractFormValidator {
+public class ComparableFormValidator<T extends Comparable<?>> extends AbstractFormValidator {
 
 	private static final long serialVersionUID = 2750525584310932237L;
 
@@ -32,12 +32,11 @@ public class ComparableFormValidator<T extends Comparable<T>> extends AbstractFo
 		checkNotNull(formComponent2);
 		checkNotNull(comparator);
 		
-		this.components = ImmutableList.of(formComponent1, formComponent2);
+		this.components = List.of(formComponent1, formComponent2);
 		this.comparator = comparator;
 		this.errorKey = errorKey;
 	}
-	
-	
+
 	@Override
 	public FormComponent<?>[] getDependentFormComponents() {
 		return Iterables.toArray(components, FormComponent.class);
@@ -51,11 +50,10 @@ public class ComparableFormValidator<T extends Comparable<T>> extends AbstractFo
 		if (
 				formComponent1.getConvertedInput() != null
 			&&	formComponent2.getConvertedInput() != null
-			&&	comparator.compare(formComponent1.getConvertedInput(), formComponent2.getConvertedInput()) > 0) {
+			&&	comparator.compare(formComponent1.getConvertedInput(), formComponent2.getConvertedInput()) > 0
+		) {
 			error(formComponent2, errorKey);
 		}
 	}
-
-	
 
 }
